<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_140sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_extra_bold"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="35dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edit_bg"
            android:fontFamily="@font/inter_font"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingStart="@dimen/_18sdp"
            android:textColor="@color/black"
            android:textColorHint="#979393"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edit_bg"
            android:drawablePadding="12dp"
            android:ems="20"
            android:fontFamily="@font/inter_font"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="19dp"
            android:textColor="@color/black"
            android:textColorHint="#979393"
            android:textSize="@dimen/_15sdp" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:fontFamily="@font/inter_medium"
            android:paddingStart="5dp"
            android:buttonTint="@color/appColor"
            android:text="@string/stay_connected"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/inter_medium"
            android:text="@string/log_in"
            android:textAllCaps="false"
                android:textColor="@color/white"
            android:textSize="14dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/inter_medium"
            android:text="@string/continue_as_guest"
            android:onClick="guest"
            android:textAllCaps="false"
                android:textColor="@color/white"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_create_now"
            android:textColor="#686868"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>
</RelativeLayout>
