<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"

    >

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/appColor"
        android:orientation="vertical">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/appColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/imageView2"
                android:fontFamily="@font/inter_extra_bold"
                android:text="@string/add_income"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:onClick="back"
                android:src="@drawable/back"
                android:tint="@color/white" />

        </RelativeLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/editTextIncomeAmount"
        android:layout_width="match_parent"
        android:layout_height="45dp"

        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_bg"
        android:fontFamily="@font/inter_font"
        android:hint="@string/income_amount"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:paddingStart="@dimen/_18sdp"
        android:textColor="@color/black"
        android:textColorHint="#979393"
        android:textSize="@dimen/_15sdp" />

    <Spinner
        android:id="@+id/spinnerIncomeSource"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_bg"
        android:fontFamily="@font/inter_font"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextIncomeDate"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_bg"
        android:fontFamily="@font/inter_font"
        android:hint="@string/date_of_income"
        android:inputType="date"
        android:padding="10dp"
        android:paddingStart="@dimen/_18sdp"
        android:textColor="@color/black"
        android:textColorHint="#979393"
        android:textSize="@dimen/_15sdp"
        android:focusable="false"
        android:clickable="true" />

    <EditText
        android:id="@+id/editTextIncomeDescription"
        android:layout_width="match_parent"
        android:hint="@string/descriptions"
        android:inputType="textMultiLine"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:visibility="gone"
        android:background="@drawable/edit_bg"
        android:fontFamily="@font/inter_font"
        android:padding="10dp"
        android:paddingStart="@dimen/_18sdp"
        android:textColor="@color/black"
        android:textColorHint="#979393"
        android:textSize="@dimen/_15sdp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSaveIncome"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/inter_medium"
        android:text="@string/add_income"
        android:textAllCaps="false"
            android:textColor="@color/white"
        android:textSize="14dp" />

</LinearLayout>
