<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:orientation="vertical"
    >


    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/appColor"
        android:orientation="vertical">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/appColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@+id/imageView2"
                android:fontFamily="@font/inter_extra_bold"
                android:text="@string/security"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:onClick="back"
                android:src="@drawable/back"
                app:tint="@color/white" />

        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_bg"
        android:backgroundTint="#E8EBEF"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/inter_medium"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/_10sdp"
            android:onClick="setPin"
            android:text="@string/add_pin_option"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="-40dp"
            android:onClick="setPin"
            android:layout_marginEnd="10dp"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/applight"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/inter_medium"
            android:gravity="center_vertical"
            android:text="@string/add_touch_id_option"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="-30dp"
            android:layout_marginEnd="10dp"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/arrow" />
    </LinearLayout>
</RelativeLayout>